Exam IDE Integration and Future Enhancements (9)
- The exam creator can now define variables, constants, functions and more in the IDE during exam creation.

Upcoming: Students will have the ability to upload their datasets and use them within the IDE.

--- a/FUExaminationSystem/templates/base_generic.html
+++ b/FUExaminationSystem/templates/base_generic.html
@@ -197,7 +197,7 @@
 
    
 
-    <footer>
+    <footer style="z-index:1000">
         <div class="containers">
             <p>&copy; 2024 FU Examination System. All rights reserved.</p>
         </div>
